Added new constraints, fixed bugs

--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -159,7 +159,7 @@ s_{v,j} + \sum_{i \in I} (a_{v,i,j} \cdot d_{y,i})			&\leq	T							&\forall y \i
 \sum_{j \in J} a_{v,i,j}							&=	a^{Inst}_{v,i}					& \forall v \in V, \forall i \in I^{Inst}  			\\
 s^{Inst}_i \cdot a_{v_i,i,j}	\leq	s_{v_i,j}			&\leq	T - a_{v_i,i,j} \cdot (T - s^{Inst}_i)		& \forall i \in I^{Inst}, \forall j \in J			\\
 d_{y,i} + s_{v,j}								&\leq f_i + 2 T \cdot (1 - a_{v,i,j})			& \forall y \in Y, \forall v \in V_y, \forall i \in I, \forall j \in J 	\\
-f_i - a_{v, i', j} \cdot 2 T							&\leq s_{v,j}							& \forall (i, i') \in IP, \forall v \in V, \forall j \in J
+f_i - a_{v, i', j} \cdot 2 T							&\leq s_{v,j}							& \forall (i, i') \in PR, \forall v \in V, \forall j \in J
 \end{align}
 
 \end{frame}
