--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -21,34 +21,6 @@
 \begin{document}
 
 %------------------------------------------------------------------------------YEARS------------------------------------------------------------------
-\iffalse
-%iffalse
-\begin{frame}{Years spanning model}
-\smalld
-
-\begin{equation}
-	\min_{N_{y,m,\sigma}, P_{m,ip}, R_{m,ir,\sigma} \in \mathbb{Z}^*}
-	\begin{aligned}
-	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [\sum_{y \in Y} 
-	(N_{y,m,\sigma} \cdot c_{y,m}) +  
-	\sum_{ip \in I^P} (P_{m,ip} \cdot d^P \cdot e^H_m) + \\
-	\sum_{ir \in I^R}[\sum_{m' = 0}^{m} (f_{m',ir,\sigma} - R_{m',ir,\sigma})] \cdot e^H_m \cdot H_m])
-	\end{aligned}	
-\end{equation}
-subject to:
-\begin{align}
-L_y \cdot N_{y,m,\sigma} + L^{Inst}_{y,m}	&\geq 	\sum_{ip \in I^P} (P_{m,ip} \cdot d^P_y) + \sum_{ir \in I^R} (R_{m,ir,\sigma} \cdot d^R_{y,ir}) +  \epsilon_{\sigma, m, y} 	
-																				& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
-N_{y,m,\sigma} + N^{Inst}_{y,m}	&\geq 	\rho_{ \sigma, m, y}									& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
-\sum_{m' = 0}^{m-1} f_{m',ir,\sigma}	&\geq 	\sum_{m' = 0}^m R_{m',ir,\sigma}							& \forall \sigma \in S, \forall m \in M, \forall ir \in I^R	\\
-P_{m,ip} 					&\leq 		\sum_{m' = 0}^{m-G^{MIN}} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip}	& \forall m \in M, \forall ip \in I^P 			\\
-P_{m,ip} 					&\geq	 	\sum_{m' = 0}^{m-G^{MAX}} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip}	& \forall m \in M, \forall ip \in I^P 			\\
-N_{y,m,\sigma}				&\leq		A_{y,m} 											& \forall \sigma \in S, \forall m \in M, \forall y \in Y
-\end{align}
-
-\end{frame}
-\fi
-
 \begin{frame}{Years spanning model}
 \smalld
 
@@ -56,13 +28,14 @@ N_{y,m,\sigma}				&\leq		A_{y,m} 											& \forall \sigma \in S, \forall m \i
 	\min_{\substack{N_{y,m,\sigma}, P_{m,ip} \in \mathbb{Z}^* \\ 
 	R_{m,ir,\sigma}, F^U_{m,ir,\sigma} \in \mathbb{Z}^* }}
 	\begin{aligned}
-	\frac{1}{|S|} \cdot \sum_{\sigma \in S} \sum_{m \in M} [ \sum_{y \in Y} 
+	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [ \sum_{y \in Y} 
 	(N_{y,m,\sigma} \cdot c_{y,m}) +  
 	e^H_m \cdot (\sum_{ip \in I^P} [P_{m,ip} \cdot d^P] + 
 	\sum_{ir \in I^R}[F^U_{m,ir,\sigma} \cdot \frac{H_m}{2} + \\
 	(F^T_{m,ir,\sigma} - F^U_{m,ir,\sigma}) \cdot (d^R_{ir} + d^D_{ir}) + 
-	R_{m,ir,\sigma}  \cdot d^R_{ir} + 
-	(F^U_{m-1, ir, \sigma} - R_{m, ir, \sigma}) \cdot H_m])]
+	R_{m,ir,\sigma}  \cdot d^R_{ir} + \\
+	(F^U_{m-1, ir, \sigma} - R_{m, ir, \sigma}) \cdot H_m])] + 
+	\sum_{ir \in I^R} [F^U_{\hat{m}, ir, \sigma} * \lambda_{ir}] )
 	\end{aligned}	
 \end{equation}
 subject to:
@@ -78,8 +51,8 @@ F^U_{m, ir, \sigma} - F^U_{m+1, ir, \sigma}	\leq	 R_{m+1,ir,\sigma}				&\leq		F^
 \end{frame}
 
 \begin{frame}{Years model Explanation}
-\smalla
-\expl The objective takes an average cost of all scenarios by counting up the cost per month. Each month has a cost for vessels chartered (by type), the energy lost due to planned maintenance, and the cost of failures (broken up in missed energy from unrepaired failures, repaired failures, planned repair tasks that fix older failures, and old ignored failures) \\
+\smallb
+\expl The objective takes an average cost of all scenarios by counting up the cost per month. Each month has a cost for vessels chartered (by type), the energy lost due to planned maintenance, and the cost of failures (broken up in missed energy from unrepaired failures, repaired failures, planned repair tasks that fix older failures, and old ignored failures). Finally there is a cost for unhandled failures in the final month. \\
 \expl For each vessel type the available time (based on charters and spare time from installation) minus the planned time the vessels are used (for planned maintenance) needs to be greater than the time spend fixing new failures. This LHS will never be negative, which enforces enough vessels are chartered to at least deal with all planned tasks. \\
 \expl Ensures enough vessels are assigned to a given month (based on feedback from that month), and the amount of vessels chartered doesn't surpass the available vessels \\
 \expl Three separate inequalities; (a) Each leftover failure is either still unsolved or repaired (b) the number of repairs does not exceed the amount of leftover failures (c) every leftover failure comes either from an old or a new failure \\
@@ -93,7 +66,7 @@ F^U_{m, ir, \sigma} - F^U_{m+1, ir, \sigma}	\leq	 R_{m+1,ir,\sigma}				&\leq		F^
 Sets:
 \begin{itemize}
 \item $S$: Scenarios
-\item $M$: Months
+\item $M = \{0 , \dots , \hat{m}\}$: Months
 \item $Y$: Vessel types
 \item $I^P$: Indices for the planned tasks (first time a turbine is visited is index 1, second time is index 2, etc...)
 \item $I^R$: Types of failures and reactive tasks
@@ -110,8 +83,8 @@ Decision variables:
 Parameters:
 \begin{itemize}
 \item $c_{y,m}$: The cost of chartering a vessel of type $y$ in month $m$
+\item $\lambda_{ir}$: The cost penalty for leftover failures of type $ir$ in the final month
 \item $e^H_m$: The energy produced by a single turbine per hour in month $m$
-\item $F^T_{m,ir,\sigma}$: The total amount of failures of type $ir \in I^R$ in month $m$ in scenario $\sigma$
 \item $H_m$: The number of hours in month $m$
 \end{itemize}
 \end{column}
@@ -121,16 +94,15 @@ Parameters:
 \begin{column}{.48\textwidth}
 Parameters (cont):
 \begin{itemize}
+\item $F^T_{m,ir,\sigma}$: The total amount of failures of type $ir \in I^R$ in month $m$ in scenario $\sigma$
 \item $\epsilon_{\sigma, m, y}$: Feedback parameter that enforces leighway in the amount of vessel time available to month $m$
 \item $\rho_{ \sigma, m, y}$: Feedback parameter that enforces a minimum amount of a certain vessel assigned to month $m$
 \item $L_y$: The amount of hours a vessel of type $y$ is available if chartered for a month
 \item $L^{Inst}_{y,m}$: Leftover hours vessels of type $y$ are available in month $m$ based on the installation schedule
 \item $N^{Inst}_{y,m}$: Amount of vessels of type $y$ used by the installation schedule in month $m$ that can also partially help out with maintenance operations
-\item $d^P$: The duration that a preventive task will take a turbine offline
-\item $d^P_y$: The duration of a preventive task for vessel type $y$
-\item $d^R_{ir}$: The duration that reactive task $ir$ will take a turbine offline
+\item $d^P \& d^P_y$: The duration of a preventive task (specified for vessel type $y$)
+\item $d^R_{ir} \& d^R_{y,ir}$: The duration of reactive task $ir$ (specified for vessel type $y$)
 \item $d^D_{ir}$: The delay before a failure of type $ir$ is detected and can be worked on
-\item $d^R_{y,ir}$: The duration of a reactive task $ir$ for vessel type $y$
 \item $G^U$ \& $G^L$: The Upper and Lower bounds months between two planned maintenance tasks
 \item $A_{y,m}$: The number of maximum available vessels of type $y$ in month $m$
 \end{itemize}
