--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -26,24 +26,21 @@
 
 \begin{equation}
 	\min_{\substack{N_{y,m,\sigma}, P_{m,ip} \in \mathbb{Z}^* \\ 
-	R_{m,ir,\sigma}, F^U_{m,ir,\sigma} \in \mathbb{Z}^* }}
+	R_{m,ir,\sigma}, U_{m,ir,\sigma} \in \mathbb{Z}^* }}
 	\begin{aligned}
-	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [ \sum_{y \in Y} 
-	(N_{y,m,\sigma} \cdot c_{y,m}) +  
-	e^H_m \cdot (\sum_{ip \in I^P} [P_{m,ip} \cdot d^P] + 
-	\sum_{ir \in I^R}[F^U_{m,ir,\sigma} \cdot \frac{H_m}{2} + \\
-	(F^T_{m,ir,\sigma} - F^U_{m,ir,\sigma}) \cdot (d^R_{ir} + d^D_{ir}) + 
-	R_{m,ir,\sigma}  \cdot d^R_{ir} + \\
-	(F^U_{m-1, ir, \sigma} - R_{m, ir, \sigma}) \cdot H_m])] + 
+	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [ 
+	\sum_{y \in Y} (N_{y,m,\sigma} \cdot c_{y,m}) +  
+	e^H_m \cdot (\sum_{ir \in I^R}[U_{m,ir,\sigma} \cdot H_m + 
+	R_{m,ir,\sigma} \cdot (d^R_{ir} + d^D_{ir})]\\
+	\sum_{ip \in I^P} [P_{m,ip} \cdot d^P])] + 
 	\sum_{ir \in I^R} [F^U_{\hat{m}, ir, \sigma} * \lambda_{ir}] )
 	\end{aligned}	
 \end{equation}
 subject to:
 \begin{align}
-\begin{aligned} \sum_{ir\in I^R} (d^R_{y, ir} \cdot (F^T_{m,ir,\sigma} + \\ F^U_{m-1,ir,\sigma} - F^U_{m,ir,\sigma})) \end{aligned}	
-						&\leq		\begin{aligned} L_y \cdot N_{y,m,\sigma} + L^{Inst}_{y,m} - \\ \sum_{ip \in I^P} (P_{m,ip} \cdot d^P_y) - \epsilon_{\sigma, m, y} \end{aligned}																		& \forall \sigma \in S, \forall m \in M, \forall y \in Y	\\
-\rho_{ \sigma, m, y} - N^{Inst}_{y,m}	&\leq		 N_{y,m,\sigma}	\leq 	A_{y,m} 							& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
-F^U_{m, ir, \sigma} - F^U_{m+1, ir, \sigma}	\leq	 R_{m+1,ir,\sigma}				&\leq		F^U_{m,ir,\sigma}	\leq	F^T_{m, ir, \sigma} + 	F^U_{m-1, ir, \sigma}					& \forall \sigma \in S, \forall m \in M, \forall ir \in I^R	\\
+L_y \cdot N_{y,m,\sigma} + L^{Inst}_{y,m}		&\geq		\sum_{ip \in I^P} (P_{m,ip} \cdot d^P_y) + \sum_{ir\in I^R} (d^R_{y, ir} \cdot R_{m,ir,\sigma}) + \epsilon_{\sigma, m, y}																						& \forall \sigma \in S, \forall m \in M, \forall y \in Y	\\
+\rho_{ \sigma, m, y} - N^{Inst}_{y,m}			&\leq		 N_{y,m,\sigma}	\leq 	A_{y,m} 					& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
+F^T_{m, ir, \sigma} + U_{m-1,ir,\sigma} 		&=		R_{m,ir,\sigma} + U_{m,ir,\sigma}					& \forall \sigma \in S, \forall m \in M, \forall ir \in I^R	\\
 \sum_{m' = 0}^{m-G^U} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip} 	&\leq P_{m,ip}	\leq 	\sum_{m' = 0}^{m-G^L} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip}	
 																				& \forall m \in M, \forall ip \in I^P			
 \end{align}
@@ -51,11 +48,11 @@ F^U_{m, ir, \sigma} - F^U_{m+1, ir, \sigma}	\leq	 R_{m+1,ir,\sigma}				&\leq		F^
 \end{frame}
 
 \begin{frame}{Years model Explanation}
-\smallb
-\expl The objective takes an average cost of all scenarios by counting up the cost per month. Each month has a cost for vessels chartered (by type), the energy lost due to planned maintenance, and the cost of failures (broken up in missed energy from unrepaired failures, repaired failures, planned repair tasks that fix older failures, and old ignored failures). Finally there is a cost for unhandled failures in the final month. \\
-\expl For each vessel type the available time (based on charters and spare time from installation) minus the planned time the vessels are used (for planned maintenance) needs to be greater than the time spend fixing new failures. This LHS will never be negative, which enforces enough vessels are chartered to at least deal with all planned tasks. \\
+\smalla
+\expl The objective takes an average cost of all scenarios by counting up the cost per month. Each month has a cost for vessels chartered (by type), the cost of failures (broken up in unhandled and repaired failures), andthe energy lost due to planned maintenance. Finally there is a cost for unhandled failures in the final month. \\
+\expl For each vessel type the available time (based on charters and spare time from installation) minus the planned time the vessels are used (for planned maintenance) needs to be greater than the time spend fixing new failures. \\
 \expl Ensures enough vessels are assigned to a given month (based on feedback from that month), and the amount of vessels chartered doesn't surpass the available vessels \\
-\expl Three separate inequalities; (a) Each leftover failure is either still unsolved or repaired (b) the number of repairs does not exceed the amount of leftover failures (c) every leftover failure comes either from an old or a new failure \\
+\expl Every failure (new and leftover from previous months) needs to be repaired or unhandled  \\
 \expl Ensures planned tasks are not scheduled too close together or too far apart by counting up the turbines that were last visited $G^U$ and $G^L$ or more months ago respectively, and subtracting all that were revisited more recently
 \end{frame}
 
@@ -77,7 +74,7 @@ Decision variables:
 \item $N_{y,m,\sigma}$: The amount of vessels of type $y$ chartered in month $m$ in scenario $\sigma$
 \item $P_{m,ip}$: Planned tasks in iteration $ip \in I^P$ in month $m$
 \item $R_{m,ir,\sigma}$: Repair tasks of type $ir \in I^R$ in month $m$ and scenario $\sigma$
-\item $F^U_{m,ir,\sigma}$: Unhandled failures of type $ir \in I^R$ in month $m$ and scenario $\sigma$
+\item $U_{m,ir,\sigma}$: Unhandled failures of type $ir \in I^R$ in month $m$ and scenario $\sigma$
 \end{itemize}
 
 Parameters:
@@ -124,10 +121,10 @@ subject to:
 \begin{align}
 \sum_{i \in I} a_{v,i,j}							&\leq	\sum_{i \in I} a_{v,i,(j-1)}	\leq	1		&\forall v \in V, \forall j \in J - \{ 0 \}			\\
 \sum_{j \in J} a_{v,i,j}							&\leq	A_i							&\forall v \in V,\forall i \in I^{Maint} 			\\
-\sum_{v \in V_y} \sum_{j \in J} a_{v, i, j}				&\geq	A_i \cdot \rho_{y,i}  				& \forall y \in Y, \forall i \in I^{Maint} 			\\
+\sum_{v \in V_y} \sum_{j \in J} a_{v, i, j}				&=	A_i \cdot \rho_{y,i}  				& \forall y \in Y, \forall i \in I^{Maint} 			\\
 s_{v,j} - s_{v,(j-1)}							&\geq	\sum_{i \in I} (a_{v,i,(j-1)} \cdot d_{y,i})	& \forall y \in Y, \forall v \in V_y, \forall j \in J - \{ 0 \}	\\
 s_{v,j}									&\geq r_i \cdot a_{v,i,j} 					& \forall v \in V, \forall I \in I, \forall j \in J		\\
-s_{v,j} + d_{y,i}								&\leq f_i + M \cdot (1 - a_{v,i,j})			& \forall y \in Y, \forall v \in V_y, \forall i \in I, \forall j \in J 	\\
+s_{v,j} + d_{y,i}								&\leq f_i + M \cdot (1 - a_{v,i,j})				& \forall y \in Y, \forall v \in V_y, \forall i \in I, \forall j \in J 	\\
 f_i 										&\leq	T							& \forall i \in I 						\\
 f_i - a_{v, i', j} \cdot M							&\leq s_{v,j}							& \forall (i, i') \in PR, \forall v \in V, \forall j \in J 	\\
 \sum_{j \in J} a_{v,i,j}							&=	a^{Inst}_{v,i}					& \forall v \in V, \forall i \in I^{Inst}  			\\
