--- a/Code Slides/code.tex
+++ b/Code Slides/code.tex
@@ -44,17 +44,28 @@
 
 \begin{frame}{Splitting the problem up}
 \begin{columns}
+\begin{column}{0.67\textwidth}
+\includegraphics[width=\textwidth]{split2}
+\end{column}
 \begin{column}{0.33\textwidth}
 \includegraphics[width=\textwidth]{split1}
-\end{column}
-\begin{column}{0.66\textwidth}
-\includegraphics[width=\textwidth]{split2}
 \end{column}
 \end{columns}
 \end{frame}
 
 \begin{frame}{Feedback generation}
 \includegraphics[width=\textwidth]{feedback}
+\end{frame}
+
+\begin{frame}{Problem size}
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\includegraphics[width=\textwidth]{size1}
+\end{column}
+\begin{column}{0.5\textwidth}
+\includegraphics[width=\textwidth]{size2}
+\end{column}
+\end{columns}
 \end{frame}
 
 \begin{frame}{Ideas to try}
