Updated data reader to process inline comments

--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -27,7 +27,7 @@
 \begin{equation}
 	\min_{\substack{N_{y,m}, P_{m,ip} \in \mathbb{Z}^* \\ 
 	R_{m,ir,\sigma}, U_{m,ir,\sigma} \in \mathbb{Z}^*  \\
-	M^P_{y, m}, M^R_{y, m, ir}}}
+	M^P_{y, m}, M^R_{y, m, ir} \in \mathbb{Z}^*}}
 	\begin{aligned}
 	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [ 
 	\sum_{y \in Y} (N_{y,m} \cdot c_{y,m}) +  
